--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
 		    <version>1.2</version>
 		    <scope>provided</scope>
 	</dependency>
+	<!-- for Tomcat 7 -->
 	<dependency>
     		<groupId>org.apache.taglibs</groupId>
     		<artifactId>taglibs-standard-spec</artifactId>
