--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
   <display-name>Note service Web Application</display-name>
   <welcome-file-list>
-      <welcome-file>/notes</welcome-file>
+      <welcome-file>/</welcome-file>
   </welcome-file-list>
 
   <!-- This will catch any exception -->
