--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <slf4j.version>1.7.21</slf4j.version>
         <log4j.version>1.7.21</log4j.version>
         <postgresql.version>42.1.1</postgresql.version>
-        <jackson-json.version>2.6.6</jackson-json.version>
+        <jackson-json.version>2.10.0</jackson-json.version>
 	<hsql.version>2.2.8</hsql.version>
 	<mockito.version>2.7.22</mockito.version>
   </properties>
@@ -116,6 +116,11 @@
     		<artifactId>postgresql</artifactId>
     		<version>${postgresql.version}</version>
 	</dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>1.1.0</version>
+        </dependency>
 
 	<!-- Testing -->
 	<dependency>
@@ -148,7 +153,12 @@
 		<version>${spring.version}</version>
 		<scope>test</scope>
 	</dependency>
-
+	<dependency>
+	    <groupId>org.hamcrest</groupId>
+	    <artifactId>hamcrest-junit</artifactId>
+	    <version>2.0.0.0</version>
+	    <scope>test</scope>
+	</dependency>
 		
   </dependencies>
   <build>
